@@ -176,6 +176,10 @@ export(makeMMF10Function)
 export(makeMMF11Function)
 export(makeMMF12Function)
 export(makeMMF13Function)
+export(makeMMF14Function)
+export(makeMMF14aFunction)
+export(makeMMF15Function)
+export(makeMMF15aFunction)
 export(makeMMF1Function)
 export(makeMMF1eFunction)
 export(makeMMF1zFunction)
