@@ -1,0 +1,31 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/mof.mmf14a.R
+\name{makeMMF14aFunction}
+\alias{makeMMF14aFunction}
+\title{MMF14a Function}
+\usage{
+makeMMF14aFunction(dimensions, n.objectives, np = 2L)
+}
+\arguments{
+\item{dimensions}{[\code{integer(1)}]\cr
+Number of decision variables.}
+
+\item{n.objectives}{[\code{integer(1)}]\cr
+Number of objectives.}
+
+\item{np}{[\code{integer}(1)]\cr
+Number of global Pareto sets. In the CEC2019 competition, the organizers used
+\code{np = 2L}.}
+}
+\value{
+[\code{smoof_multi_objective_function}]
+}
+\description{
+Test problem from the set of "multimodal multiobjective functions" as for
+instance used in the CEC2019 competition.
+}
+\references{
+Caitong Yue, Boyang Qu, Kunjie Yu, Jing Liang, and Xiaodong Li, "A novel
+scalable test problem suite for multimodal multiobjective optimization," in
+Swarm and Evolutionary Computation, Volume 48, August 2019, pp. 62–71, Elsevier.
+}
