@@ -9,6 +9,7 @@ smoof 1.6
 * Changed: replaced geom_tile with geom_raster
 * Added MMF1 to MMF13 problems from CEC2019 test suite
 * Added SYM-Part simple, SYM-Part rotated and Omni-Test problems from CEC2019 test suite
+* Added MMF14, MMF14a, MMF15 and MMF15a problems from CEC2019 test suite
 
 smoof 1.5.1
 ===========
